<?xml version="1.0" encoding="utf-8"?>
<ScrollView     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"

        >

        <RelativeLayout
            android:id="@+id/first_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/firstSong"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/second_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secondSong"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/third_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thirdSong"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/fourth_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fourthSong"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_play_arrow_black_24dp" />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/fifth_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fifthSong"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/sixth_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sixthSong"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/seventh_song"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="28dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seventhSong"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_arrow_black_24dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>