<?xml version="1.0" encoding="utf-8"?>
<ScrollView     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/sky2">

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_playlist"
        android:textSize="16sp"/>
    <ImageView
        android:id="@+id/first_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:layout_alignParentRight="true"
        />
        <ImageView
            android:layout_toLeftOf="@id/first_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_playlist"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/second_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:layout_toLeftOf="@id/second_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_playlist"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/third_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:layout_toLeftOf="@id/third_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourth_playlist"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/fourth_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_play_arrow_black_24dp" />
        <ImageView
            android:layout_toLeftOf="@id/fourth_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifth_playlist"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/fifth_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:layout_toLeftOf="@id/fifth_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sixth_playlist"
            android:textSize="16sp" />
        <ImageView
            android:id="@+id/sixth_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:layout_toLeftOf="@id/sixth_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="28dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seventh_playlist"
            android:textSize="16sp"/>
        <ImageView
            android:id="@+id/seventh_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_play_arrow_black_24dp"
            android:layout_alignParentRight="true"
            />
        <ImageView
            android:layout_toLeftOf="@id/seventh_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shuffle_black_24dp"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>
</LinearLayout>
</ScrollView>